--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".MainActivity"
+    tools:context=".ui.auth.activity.LoginActivity"
     android:id="@+id/main">
     <!-- Top background image -->
     <ImageView
